--- a/index.html
+++ b/index.html
@@ -6,7 +6,86 @@ layout: default
   <div class="container">
     <div class="fw-logo">
       <h1 class="title"><span class="first">florian</span><span class="last">weich</span><span class="suffix">.me</span></h1>
-      <h2 class="subtitle">designer<span>&amp;</span>webentwickler</h2>
+      <h2 class="subtitle">designer<span class="green">&amp;</span>webentwickler</h2>
     </div>
   </div>
 </section>
+
+<section class="cards" id="home-cards">
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <div class="card">
+          <div class="card-header" id="card-bg-01">
+            <div class="icon-circle">
+              <img src="images/rounded_icons/coding-html.svg" alt="HTML">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>HTML, CSS &amp; JS</h4>
+            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="/kentnisse/frontend" class="btn">Mehr erfahren</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="card-header" id="card-bg-02">
+            <div class="icon-circle">
+              <img src="images/rounded_icons/checklist.svg" alt="Wordpress">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Wordpress</h4>
+            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="/kentnisse/wordpress" class="btn">Mehr erfahren</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="card-header" id="card-bg-03">
+            <div class="icon-circle">
+              <img src="images/rounded_icons/ruby.svg" alt="Ruby on Rails">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Ruby on Rails</h4>
+            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="/kentnisse/rubyonrails" class="btn">Mehr erfahren</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre">irb>_</span><span>puts</span> <span class="blue">"</span><span class="green">hello, world!</span><span class="blue">"</span>
+  </div>
+</section>
+
+<section class="dark-bg" id="references">
+  <div class="container">
+    <h3>meine<span>referenzen</span></h3>
+    <ul class="slider-nav">
+      <li class="active"></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <ul class="slider">
+      <li class="active"><img src="http://placehold.it/600x375"></li>
+      <li class="left"><img src="http://placehold.it/600x375"></li>
+      <li class="right"><img src="http://placehold.it/600x375"></li>
+    </ul>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre">&lt;?php</span><span class="green">the_post</span><span class="blue">();</span>
+  </div>
+</section>
+
+{% include contact.html %}
