Added skills page

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Datenschutzerklärung
+top-banner-id: legal
+subtitle: <span class="green">datenschutz</span>erkl&auml;rung
 group: 'footer-menu'
 permalink: /datenschutz/
 ---
