--- a/impressum.html
+++ b/impressum.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Impressum
+top-banner-id: legal
+subtitle: impressum<span class="green">&amp;</span>disclaimer
 group: 'footer-menu'
 permalink: /impressum/
 ---
