--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 ---
 layout: default
+top-banner-id: home
+subtitle: designer<span class="green">&amp;</span>webentwickler
 ---
-
-<section class="top-banner" id="home">
-  <div class="container">
-    <div class="fw-logo">
-      <h1 class="title"><span class="first">florian</span><span class="last">weich</span><span class="suffix">.me</span></h1>
-      <h2 class="subtitle">designer<span class="green">&amp;</span>webentwickler</h2>
-    </div>
-  </div>
-</section>
 
 <section class="cards" id="home-cards">
   <div class="container">
     <div class="row">
-      <div class="col-3">
+      <div class="thirds">
         <div class="card">
           <div class="card-header" id="card-bg-01">
             <div class="icon-circle">
@@ -24,11 +17,11 @@ layout: default
           <div class="card-body">
             <h4>HTML, CSS &amp; JS</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="/kentnisse/frontend" class="btn">Mehr erfahren</a>
+            <a href="/kenntnisse/frontend/" class="btn">Mehr erfahren</a>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="thirds">
         <div class="card">
           <div class="card-header" id="card-bg-02">
             <div class="icon-circle">
@@ -38,11 +31,11 @@ layout: default
           <div class="card-body">
             <h4>Wordpress</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="/kentnisse/wordpress" class="btn">Mehr erfahren</a>
+            <a href="/kenntnisse/wordpress/" class="btn">Mehr erfahren</a>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="thirds">
         <div class="card">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
@@ -52,7 +45,7 @@ layout: default
           <div class="card-body">
             <h4>Ruby on Rails</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="/kentnisse/rubyonrails" class="btn">Mehr erfahren</a>
+            <a href="/kenntnisse/rails/" class="btn">Mehr erfahren</a>
           </div>
         </div>
       </div>
