legal stuff and about me

--- a/impressum.html
+++ b/impressum.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 title: Impressum
 top-banner-id: legal
 subtitle: impressum<span class="green">&amp;</span>disclaimer
@@ -7,4 +7,77 @@ group: 'footer-menu'
 permalink: /impressum/
 ---
 
-Das wird einmal das Impressum
+<section class="cards" id="imprint">
+  <div class="container">
+    <div class="row">
+      <div class="two-thirds">
+        <div class="card">
+          <div class="card-header wide" id="card-bg-01">
+            <div class="icon-circle">
+              <img src="../../images/rounded_icons/open-sign.svg" alt="Impressum">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Angaben gem&auml;ß § 5 TMG:</h4>
+            <p>
+              <strong>Florian Weich</strong><br>
+              Designer &amp; Webentwickler<br><br>
+              Am Anger 2<br>
+              95494 Gesees
+            </p>
+            <h4>Verantwortlich f&uuml;r den Inhalt nach § 55 Abs. 2 RStV:</h4>
+            <p>
+              Florian Weich<br>
+              Am Anger 2<br>
+              95494 Gesees
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="thirds">
+        <div class="card">
+          <div class="card-header" id="card-bg-03">
+            <div class="icon-circle">
+              <img src="../../images/rounded_icons/message.svg" alt="Kontakt">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Kontakt</h4>
+            <p>
+              Florian Weich<br>
+              Am Anger 2<br>
+              95494 Gesees<br><br>
+
+              hallo@florianweich.me<br><br>
+
+              09201 20 24 321<br>
+            </p>
+            {% include social_list.html %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre">class</span><span class="green">require</span> <span class="blue">"</span>legal/stuff<span class="blue">"</span>
+  </div>
+</section>
+
+<section class="dark-bg std-pad" id="disclaimer">
+  <div class="container">
+    <h3>haftungsausschluss (<span>disclaimer</span>)</h3>
+    <p><h4>Haftung für Inhalte</h4></p><p>Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p><p><h4>Haftung für Links</h4></p><p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p><p><h4>Urheberrecht</h4></p><p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+    <p class="source">Quelle: <a href="http://www.e-recht24.de" target="_blank" rel="nofollow">http://www.e-recht24.de</a></p>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre">git</span><span class="green">checkout</span> <span class="blue">master</span>
+  </div>
+</section>
+
+{% include contact.html %}
