--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
         <div class="card">
           <div class="card-header" id="card-bg-02">
             <div class="icon-circle">
-              <img src="images/rounded_icons/checklist.svg" alt="Wordpress">
+              <img src="images/rounded_icons/wordpress.svg" alt="Wordpress">
             </div>
           </div>
           <div class="card-body">
@@ -61,7 +61,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
 
 <section class="dark-bg" id="references">
   <div class="container">
-    <h3>meine<span>referenzen</span></h3>
+    <h3>neueste<span>referenzen</span></h3>
     <ul class="slider-nav">
       <li class="active"></li>
       <li></li>
