--- a/kenntnisse/rails.html
+++ b/kenntnisse/rails.html
@@ -1,7 +1,95 @@
 ---
-layout: page
+layout: default
 title: "Ruby on Rails"
 top-banner-id: skills
 subtitle: kenntnisse[<span class="green">ruby</span>on<span class="green">rails</span>]
 permalink: /kenntnisse/rails/
+devicons:
+  - ruby_on_rails
+  - sass
+  - git
+  - redis
+  - heroku
+  - aws
+  - terminal
+  - sublime
 ---
+
+<section class="cards">
+  <div class="container">
+    <div class="row">
+      <div class="two-thirds">
+        <div class="card">
+          <div class="card-header wide" id="card-bg-01">
+            <div class="icon-circle">
+              <img src="../../images/rounded_icons/ruby.svg" alt="Ruby on Rails">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Ruby on Rails</h4>
+            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <ul class="badge-list">
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/rails.svg" alt="Ruby on Rails"><h5 class="badge-title">Rails</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/heroku.svg" alt="Heroku"><h5 class="badge-title">Heroku</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/aws.svg" alt="Amazon Web Services"><h5 class="badge-title">AWS</h5></div></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="thirds">
+        <div class="card">
+          <div class="card-header" id="card-bg-03">
+            <div class="icon-circle">
+              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Tools &amp; Frameworks</h4>
+            <p>Diese Tools und Frameworks helfen mir bei der Ruby on Rails-Entwicklung.</p>
+            <ul class="tools-icon-list">
+              {% for devicon in page.devicons %}
+                <li class="tools-icon-list-item"><span class="devicons devicons-{{ devicon }}" title="{{ devicon }}"></span></li>
+              {% endfor %}
+            </ul>
+            <a href="#toolsframeworks" class="btn">Mehr erfahren</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre small">Gemfile</span>gem <span class="blue">'</span><span class="green">rails</span><span class="blue">'</span>
+  </div>
+</section>
+
+<section class="dark-bg collection-section" id="toolsframeworks">
+  <div class="container">
+    <h3>tools<span class="fine white">&amp;</span><span>frameworks</span></h3>
+    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <ul class="collection">
+      {% for tool in site.rails_tools_frameworks %}
+      <li class="collection-item">
+        <div class="collection-item-content">
+          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/collection-icon-bg.svg') no-repeat center top;">
+            <span class="{{ tool.icon }}"></span>
+          </div>
+          <h5>{{ tool.type }}</h5>
+          <h4>{{ tool.title }}</h4>
+          <p>{{ tool.content }}</p>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre small">Model</span>has_many <span class="blue">:</span><span class="green">children</span>
+  </div>
+</section>
+
+{% include contact.html %}
