--- a/kenntnisse/wordpress.html
+++ b/kenntnisse/wordpress.html
@@ -1,7 +1,94 @@
 ---
-layout: page
+layout: default
 title: "Wordpress"
 top-banner-id: skills
 subtitle: kenntnisse[<span class="green">wordpress</span>]
 permalink: /kenntnisse/wordpress/
+devicons:
+  - wordpress
+  - php
+  - mysql
+  - envato
+  - responsive
+  - git
+  - atom
 ---
+
+<section class="cards">
+  <div class="container">
+    <div class="row">
+      <div class="two-thirds">
+        <div class="card">
+          <div class="card-header wide" id="card-bg-01">
+            <div class="icon-circle">
+              <img src="../../images/rounded_icons/wordpress.svg" alt="Wordpress">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Wordpress</h4>
+            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <ul class="badge-list">
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/wordpress_shield.svg" alt="Wordpress"><h5 class="badge-title">Wordpress</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/php.svg" alt="PHP"><h5 class="badge-title">PHP</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/mysql.svg" alt="MySQL"><h5 class="badge-title">MySQL</h5></div></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="thirds">
+        <div class="card">
+          <div class="card-header" id="card-bg-03">
+            <div class="icon-circle">
+              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>Tools &amp; Frameworks</h4>
+            <p>Diese Tools und Frameworks helfen mir bei der Wordpress-Entwicklung.</p>
+            <ul class="tools-icon-list">
+              {% for devicon in page.devicons %}
+                <li class="tools-icon-list-item"><span class="devicons devicons-{{ devicon }}" title="{{ devicon }}"></span></li>
+              {% endfor %}
+            </ul>
+            <a href="#toolsframeworks" class="btn">Mehr erfahren</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre">&lt;?php</span>while (<span class="green">have_posts</span><span class="blue">()</span>)
+  </div>
+</section>
+
+<section class="dark-bg collection-section" id="toolsframeworks">
+  <div class="container">
+    <h3>tools<span class="fine white">&amp;</span><span>frameworks</span></h3>
+    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <ul class="collection">
+      {% for tool in site.wordpress_tools_frameworks %}
+      <li class="collection-item">
+        <div class="collection-item-content">
+          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/collection-icon-bg.svg') no-repeat center top;">
+            <span class="{{ tool.icon }}"></span>
+          </div>
+          <h5>{{ tool.type }}</h5>
+          <h4>{{ tool.title }}</h4>
+          <p>{{ tool.content }}</p>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+</section>
+
+<section class="code-separator">
+  <div class="container">
+    <span class="pre small">SELECT</span>* <span class="blue">FROM</span> <span class="green">wp_posts</span>
+  </div>
+</section>
+
+{% include contact.html %}
