--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
 
 <section class="cards" id="home-cards">
   <div class="container">
-    <div class="row">
-      <div class="thirds">
+    <div class="row flex">
+      <div class="thirds flex">
         <div class="card">
           <div class="card-header" id="card-bg-01">
             <div class="icon-circle">
@@ -21,7 +21,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
         </div>
       </div>
-      <div class="thirds">
+      <div class="thirds flex">
         <div class="card">
           <div class="card-header" id="card-bg-02">
             <div class="icon-circle">
@@ -35,7 +35,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
         </div>
       </div>
-      <div class="thirds">
+      <div class="thirds flex">
         <div class="card">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
