--- a/kenntnisse/wordpress.html
+++ b/kenntnisse/wordpress.html
@@ -16,8 +16,8 @@ devicons:
 
 <section class="cards">
   <div class="container">
-    <div class="row">
-      <div class="two-thirds">
+    <div class="row flex">
+      <div class="two-thirds flex">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -35,7 +35,7 @@ devicons:
           </div>
         </div>
       </div>
-      <div class="thirds">
+      <div class="thirds flex">
         <div class="card">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
