--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -9,8 +9,8 @@ permalink: /uebermich/
 
 <section class="cards">
   <div class="container">
-    <div class="row">
-      <div class="two-thirds">
+    <div class="row flex">
+      <div class="two-thirds flex">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -18,7 +18,7 @@ permalink: /uebermich/
             </div>
           </div>
           <div class="card-body">
-            <h4>Hallo, mein Name ist Florian</h4>
+            <h4>Hallo, mein Name ist Florian.</h4>
             <div class="row">
               <div class="half">
                 <p class="text-justify">
@@ -34,15 +34,15 @@ permalink: /uebermich/
           </div>
         </div>
       </div>
-      <div class="thirds">
+      <div class="thirds flex">
         <div class="card transparent-bg">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
               <img src="../../images/rounded_icons/camera.svg" alt="Kamera">
             </div>
           </div>
-          <div class="card-body fullsize-img">
-            <img src="../../images/florianweich_profile.jpg" alt="Florian Weich">
+          <div class="card-body fullsize-img" id="profile-image">
+            
           </div>
         </div>
       </div>
