--- a/impressum.html
+++ b/impressum.html
@@ -9,8 +9,8 @@ permalink: /impressum/
 
 <section class="cards" id="imprint">
   <div class="container">
-    <div class="row flex">
-      <div class="two-thirds flex">
+    <div class="row">
+      <div class="two-thirds">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -34,7 +34,7 @@ permalink: /impressum/
           </div>
         </div>
       </div>
-      <div class="thirds flex">
+      <div class="thirds">
         <div class="card">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
