--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -9,8 +9,8 @@ permalink: /uebermich/
 
 <section class="cards">
   <div class="container">
-    <div class="row flex">
-      <div class="two-thirds flex">
+    <div class="row">
+      <div class="two-thirds">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -34,7 +34,7 @@ permalink: /uebermich/
           </div>
         </div>
       </div>
-      <div class="thirds flex">
+      <div class="thirds">
         <div class="card transparent-bg">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
@@ -42,7 +42,7 @@ permalink: /uebermich/
             </div>
           </div>
           <div class="card-body fullsize-img" id="profile-image">
-            
+
           </div>
         </div>
       </div>
