--- a/danke.html
+++ b/danke.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Danke
-top-banner-id: aboutme
+top-banner-id: thanks
 subtitle: <span class="green">kontakt</span>formular
 permalink: /danke/
 ---
@@ -9,6 +9,6 @@ permalink: /danke/
 <section id="thanks">
   <div class="container">
     <h3>vielen<span>dank!</span></h3>
-    <p class="lead">Ich habe Ihre Nachricht erhalten und werde mich so bald wie m&ouml;glich bei Ihnen melden!</p>
+    <p class="lead">Ich habe Ihre Nachricht erhalten und werde mich mit Ihnen in Verbindung setzen.</p>
   </div>
 </section>
