--- a/datenschutz.html
+++ b/datenschutz.html
@@ -4,6 +4,7 @@ title: Datenschutzerklärung
 top-banner-id: legal
 subtitle: <span class="green">datenschutz</span>erkl&auml;rung
 group: 'footer-menu'
+order: 2
 permalink: /datenschutz/
 ---
 
