--- a/impressum.html
+++ b/impressum.html
@@ -4,13 +4,14 @@ title: Impressum
 top-banner-id: legal
 subtitle: impressum<span class="green">&amp;</span>disclaimer
 group: 'footer-menu'
+order: 1
 permalink: /impressum/
 ---
 
 <section class="cards" id="imprint">
   <div class="container">
     <div class="row">
-      <div class="two-thirds">
+      <div class="col col--8-of-12">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -34,8 +35,8 @@ permalink: /impressum/
           </div>
         </div>
       </div>
-      <div class="thirds">
-        <div class="card">
+      <div class="col col--4-of-12">
+        <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
               <img src="../../images/rounded_icons/message.svg" alt="Kontakt">
@@ -76,7 +77,8 @@ permalink: /impressum/
     <p>&nbsp;</p>
 
     <h3>bild<span>nachweise</span></h3>
-    <p>Banner &amp; cards background images <a href="http://www.freepik.com" target="_blank">designed by Freepik</a>.</p>
+    <p>Banner &amp; cards background images <a href="http://www.freepik.com" rel="nofollow" target="_blank">designed by Freepik</a></p>
+    <p><a rel="nofollow" href="https://www.iconfinder.com/icons/199495/blog_communication_connection_internet_social_web_wordpress_icon" target="_blank">Wordpress Social Icon</a> by <a rel="nofollow" href="https://www.iconfinder.com/vectorgraphit" target="_blank">vectorgraphit</a> is licensed under <a rel="nofollow" href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
 
   </div>
 </section>
