--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
 <section class="cards" id="home-cards">
   <div class="container">
     <div class="row">
-      <div class="thirds">
+      <div class="col col--4-of-12">
         <div class="card">
           <div class="card-header" id="card-bg-01">
             <div class="icon-circle">
@@ -21,7 +21,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
         </div>
       </div>
-      <div class="thirds">
+      <div class="col col--4-of-12">
         <div class="card">
           <div class="card-header" id="card-bg-02">
             <div class="icon-circle">
@@ -35,8 +35,8 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
         </div>
       </div>
-      <div class="thirds">
-        <div class="card">
+      <div class="col col--4-of-12">
+        <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
               <img src="images/rounded_icons/ruby.svg" alt="Ruby on Rails">
