--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -1,18 +1,14 @@
 ---
 layout: default
-title: "Ruby on Rails"
+title: "Apps"
 top-banner-id: skills
-subtitle: kenntnisse[<span class="green">ruby</span>on<span class="green">rails</span>]
-permalink: /kenntnisse/rails/
+subtitle: apps[<span class="green">OSX, iOS, tvOS</span>]
+permalink: /kenntnisse/apps/
 devicons:
-  - ruby_on_rails
-  - sass
+  - apple
+  - appstore
+  - swift
   - git
-  - redis
-  - heroku
-  - aws
-  - terminal
-  - sublime
 ---
 
 <section class="cards" id="skills-cards">
@@ -22,11 +18,11 @@ devicons:
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/ruby.svg" alt="Ruby on Rails">
+              <img src="../../images/rounded_icons/smartphone.svg" alt="Smartphone">
             </div>
           </div>
           <div class="card-body">
-            <h4>Ruby on Rails</h4>
+            <h4>App-Entwicklung</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/rails.svg" alt="Ruby on Rails"><h5 class="badge-title">Rails</h5></div></li>
@@ -45,7 +41,7 @@ devicons:
           </div>
           <div class="card-body">
             <h4>Tools &amp; Frameworks</h4>
-            <p>Diese Tools und Frameworks helfen mir bei der Ruby on Rails-Entwicklung.</p>
+            <p>Diese Tools und Frameworks helfen mir bei der App-Entwicklung.</p>
             <ul class="tools-icon-list">
               {% for devicon in page.devicons %}
                 <li class="tools-icon-list-item"><span class="devicons devicons-{{ devicon }}" title="{{ devicon }}"></span></li>
@@ -61,7 +57,7 @@ devicons:
 
 <section class="code-separator">
   <div class="container">
-    <span class="pre small">Gemfile</span>gem <span class="blue">'</span><span class="green">rails</span><span class="blue">'</span>
+    <span class="pre">import</span><span class="green">Foundation</span>
   </div>
 </section>
 
@@ -88,7 +84,7 @@ devicons:
 
 <section class="code-separator">
   <div class="container">
-    <span class="pre small">Model</span>has_many <span class="blue">:</span><span class="green">children</span>
+    <span class="pre">let</span>apples <span class="blue">=</span> shoppingList.<span class="green">removeLast()</span>
   </div>
 </section>
 
