--- a/kenntnisse/frontend.html
+++ b/kenntnisse/frontend.html
@@ -15,10 +15,10 @@ devicons:
   - sublime
 ---
 
-<section class="cards">
+<section class="cards" id="skills-cards">
   <div class="container">
     <div class="row">
-      <div class="two-thirds">
+      <div class="col col--8-of-12">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -36,8 +36,8 @@ devicons:
           </div>
         </div>
       </div>
-      <div class="thirds">
-        <div class="card">
+      <div class="col col--4-of-12">
+        <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
               <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks">
