--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -7,10 +7,10 @@ group: "main-menu"
 permalink: /uebermich/
 ---
 
-<section class="cards">
+<section class="cards" id="aboutme-cards">
   <div class="container">
     <div class="row">
-      <div class="two-thirds">
+      <div class="col col--8-of-12">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -20,12 +20,12 @@ permalink: /uebermich/
           <div class="card-body">
             <h4>Hallo, mein Name ist Florian.</h4>
             <div class="row">
-              <div class="half">
+              <div class="col col--6-of-12">
                 <p class="text-justify">
                 Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.<br>Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.
                 </p>
               </div>
-              <div class="half">
+              <div class="col col--6-of-12">
                 <p class="text-justify">
                 Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Curabitur blandit tempus porttitor.
                 </p>
@@ -34,8 +34,8 @@ permalink: /uebermich/
           </div>
         </div>
       </div>
-      <div class="thirds">
-        <div class="card transparent-bg">
+      <div class="col col--4-of-12">
+        <div class="card transparent-bg last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
               <img src="../../images/rounded_icons/camera.svg" alt="Kamera">
