--- a/danke.html
+++ b/danke.html
@@ -6,7 +6,7 @@ subtitle: <span class="green">kontakt</span>formular
 permalink: /danke/
 ---
 
-<section id="thanks">
+<section id="thanks-section">
   <div class="container">
     <h3>vielen<span>dank!</span></h3>
     <p class="lead">Ich habe Ihre Nachricht erhalten und werde mich mit Ihnen in Verbindung setzen.</p>
