--- a/referenzen.html
+++ b/referenzen.html
@@ -11,7 +11,7 @@ permalink: /referenzen/
   <div class="container">
     <ul class="references-list" id="references-list">
       {% for ref in site.references %}
-      <li class="references-list-item animatable">
+      <li class="references-list-item">
         {% if ref.link %}
         <a href="{{ ref.link }}" target="_blank" rel="nofollow">
         {% endif %}
