--- a/index.html
+++ b/index.html
@@ -25,20 +25,6 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
         <div class="card">
           <div class="card-header" id="card-bg-02">
             <div class="icon-circle">
-              <img src="images/rounded_icons/wordpress.svg" alt="Wordpress">
-            </div>
-          </div>
-          <div class="card-body">
-            <h4>Wordpress</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="/kenntnisse/wordpress/" class="btn">Mehr erfahren</a>
-          </div>
-        </div>
-      </div>
-      <div class="col col--4-of-12">
-        <div class="card last">
-          <div class="card-header" id="card-bg-03">
-            <div class="icon-circle">
               <img src="images/rounded_icons/ruby.svg" alt="Ruby on Rails">
             </div>
           </div>
@@ -46,6 +32,20 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
             <h4>Ruby on Rails</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="/kenntnisse/rails/" class="btn">Mehr erfahren</a>
+          </div>
+        </div>
+      </div>
+      <div class="col col--4-of-12">
+        <div class="card last">
+          <div class="card-header" id="card-bg-03">
+            <div class="icon-circle">
+              <img src="images/rounded_icons/smartphone.svg" alt="Smartphone">
+            </div>
+          </div>
+          <div class="card-body">
+            <h4>OS X, iOS &amp; tvOS</h4>
+            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="/kenntnisse/apps/" class="btn">Mehr erfahren</a>
           </div>
         </div>
       </div>
