--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "Apps"
-top-banner-id: skills
-subtitle: apps[<span class="green">OSX, iOS, tvOS</span>]
+title: "OS X, iOS & tvOS"
+top-banner-id: apps
+subtitle: kenntnisse[<span class="green">OSX, iOS, tvOS</span>]
 permalink: /kenntnisse/apps/
 devicons:
   - apple
@@ -69,7 +69,7 @@ devicons:
       {% for tool in site.rails_tools_frameworks %}
       <li class="collection-item">
         <div class="collection-item-content">
-          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/collection-icon-bg.svg') no-repeat center top;">
+          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/top-banner_img_legal.svg') no-repeat center center;">
             <span class="{{ tool.icon }}"></span>
           </div>
           <h5>{{ tool.type }}</h5>
