--- a/kenntnisse/frontend.html
+++ b/kenntnisse/frontend.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "HTML, CSS & JS"
-top-banner-id: skills
+top-banner-id: frontend
 subtitle: kenntnisse[<span class="green">html, css, js</span>]
 permalink: /kenntnisse/frontend/
 devicons:
@@ -73,7 +73,7 @@ devicons:
       {% for tool in site.html_tools_frameworks %}
       <li class="collection-item">
         <div class="collection-item-content">
-          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/collection-icon-bg.svg') no-repeat center top;">
+          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/top-banner_img_legal.svg') no-repeat center center;">
             <span class="{{ tool.icon }}"></span>
           </div>
           <h5>{{ tool.type }}</h5>
