--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -64,7 +64,7 @@ permalink: /uebermich/
       {% for education in site.education_career %}
       <li class="collection-item">
         <div class="collection-item-content">
-          <div class="collection-icon-wrapper" style="background: #{{ education.color }} url('../../images/collection-icon-bg.svg') no-repeat center top;">
+          <div class="collection-icon-wrapper" style="background: #{{ education.color }} url('../../images/top-banner_img_legal.svg') no-repeat center center;">
             <span class="{{ education.icon }}"></span>
           </div>
           <h5>{{ education.type }}</h5>
@@ -91,7 +91,7 @@ permalink: /uebermich/
       {% for skill in site.skills_languages %}
       <li class="collection-item">
         <div class="collection-item-content">
-          <div class="collection-icon-wrapper" style="background: #{{ skill.color }} url('../../images/collection-icon-bg.svg') no-repeat center top;">
+          <div class="collection-icon-wrapper" style="background: #{{ skill.color }} url('../../images/top-banner_img_legal.svg') no-repeat center center;">
             <span class="{{ skill.icon }}"></span>
           </div>
           <h5>{{ skill.type }}</h5>
