--- a/danke.html
+++ b/danke.html
@@ -9,6 +9,6 @@ permalink: /danke/
 <section id="thanks-section">
   <div class="container">
     <h3>vielen<span>dank!</span></h3>
-    <p class="lead">Ich habe Ihre Nachricht erhalten und werde mich mit Ihnen in Verbindung setzen.</p>
+    <p class="lead">Ich habe Ihre Nachricht erhalten und werde mich so schnell wie möglich mit Ihnen in Verbindung setzen.</p>
   </div>
 </section>
