--- a/kenntnisse/wordpress.html
+++ b/kenntnisse/wordpress.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Wordpress"
-top-banner-id: skills
+top-banner-id: wordpress
 subtitle: kenntnisse[<span class="green">wordpress</span>]
 permalink: /kenntnisse/wordpress/
 devicons:
@@ -72,7 +72,7 @@ devicons:
       {% for tool in site.wordpress_tools_frameworks %}
       <li class="collection-item">
         <div class="collection-item-content">
-          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/collection-icon-bg.svg') no-repeat center top;">
+          <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/top-banner_img_legal.svg') no-repeat center center;">
             <span class="{{ tool.icon }}"></span>
           </div>
           <h5>{{ tool.type }}</h5>
