New rounded icons

--- a/impressum.html
+++ b/impressum.html
@@ -79,6 +79,8 @@ permalink: /impressum/
     <h3>bild<span>nachweise</span></h3>
     <p><a rel="nofollow" href="https://www.iconfinder.com/icons/199495/blog_communication_connection_internet_social_web_wordpress_icon" target="_blank">Wordpress Social Icon</a> by <a rel="nofollow" href="https://www.iconfinder.com/vectorgraphit" target="_blank">vectorgraphit</a> is licensed under <a rel="nofollow" href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
 
+    <p><a rel="nofollow" href="https://www.iconfinder.com/icons/218097/apple_communication_logo_mobile_silver_telephone_icon" target="_blank">Apple Social Icon</a> by <a rel="nofollow" href="https://www.iconfinder.com/vectorgraphit" target="_blank">vectorgraphit</a> is licensed under <a rel="nofollow" href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a></p>
+
   </div>
 </section>
 
