--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -18,7 +18,7 @@ devicons:
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/smartphone.svg" alt="Smartphone">
+              <img src="../../images/rounded_icons/apple.svg" alt="Apple Apps">
             </div>
           </div>
           <div class="card-body">
