--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
         <div class="card">
           <div class="card-header" id="card-bg-01">
             <div class="icon-circle">
-              <img src="images/rounded_icons/coding-html.svg" alt="HTML">
+              <img src="images/rounded_icons/html5.svg" alt="HTML">
             </div>
           </div>
           <div class="card-body">
@@ -25,7 +25,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
         <div class="card">
           <div class="card-header" id="card-bg-02">
             <div class="icon-circle">
-              <img src="images/rounded_icons/ruby.svg" alt="Ruby on Rails">
+              <img src="images/rounded_icons/rails.svg" alt="Ruby on Rails">
             </div>
           </div>
           <div class="card-body">
@@ -39,7 +39,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
-              <img src="images/rounded_icons/smartphone.svg" alt="Smartphone">
+              <img src="images/rounded_icons/apple.svg" alt="Apple Apps">
             </div>
           </div>
           <div class="card-body">
